# ludics

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: ci.yml
benchmarks/: test_approximate_steady_state.py  test_simulate_markov_chain.py
docs/: conf.py  index.md  index.rst
docs/explanation/: explanation_reference.md  markov_chain.md  population_dynamics.md  public_goods_game.md  state_representation.md
docs/how-to/: absorption_matrix.md  absortion_matrix.md  choose_fitness_function.md  compare_dynamics.md  define_fitness_function.md  fitness_function.md  heterogeneous_pgg.md  how-to.md  hybrid_population_dynamic.md  install.md  pgg_analysis.md  population_dynamic.md  simulate_markov_chain.md  steady_state.md  steady_state_precision.md  symbolic_fitness.md  transition_matrix.md
docs/reference/: apply_mutation.md  approximate_absorption_matrix.md  approximate_steady_state.md  bibliography.md  build_hybrid_dynamic.md  calculate_absorption_matrix.md  calculate_steady_state.md  compute_absorption_matrix.md  compute_aspiration.md  compute_fermi.md  compute_imispection.md  compute_introspection.md  compute_moran.md  compute_steady_state.md  extract_Q.md  extract_R_numerical.md  extract_R_symbolic.md  fermi_function.md  four_state.md  functionality.md  generate_transition_matrix.md  get_absorbing_states.md  (+6 more)
search/: search_index.json
src/: contribution_rules.py  main.py  test_contribution_rules.py  test_main.py
tests/: test_contribution_rules.py  test_fitness_functions.py  test_main.py
(+106 files in other folders)
