[project]
name = "ludics"
version = "0.1.0"
description = "A python library for the study of heterogenous population dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "numpy>=2.3.3",
    "sympy>=1.14.0",
    "scipy>=1.16.3",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.9.0",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
